fix scrollbar progress

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,10 +4,10 @@
 
 @layer base {
   html {
-    @apply overflow-x-hidden h-full w-full;
+    @apply overflow-x-hidden;
   }
   body {
-    @apply bg-ash-100 selection:bg-secondary selection:text-ash-100 overflow-x-hidden relative dark:bg-[#121212] h-full w-full;
+    @apply bg-ash-100 selection:bg-secondary selection:text-ash-100 overflow-x-hidden relative dark:bg-[#121212] h-full;
   }
 }
 
